# drone_offboard_ws

./: .gitignore  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
src/logger/: CMakeLists.txt  package.xml
src/logger/config/: logger_params.yaml
src/logger/include/logger/: logger.hpp
src/logger/launch/: logger.launch.py
src/logger/src/: logger.cpp
src/v6c_offboard_control/: CMakeLists.txt  package.xml
src/v6c_offboard_control/config/: offboard_control_params.yaml  trajectory.txt
src/v6c_offboard_control/include/v6c_offboard_control/: offboard_control.hpp
src/v6c_offboard_control/launch/: offboard_control.launch.py
src/v6c_offboard_control/src/: offboard_control.cpp
src/vicon_stream/: CMakeLists.txt  package.xml  vicon_sdk_setup.sh
src/vicon_stream/config/: vicon_stream_params.yaml
src/vicon_stream/include/vicon_stream/: vicon_stream.hpp
src/vicon_stream/launch/: vicon_stream.launch.py
src/vicon_stream/src/: vicon_client.cpp
